# eePARS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.cmd  build.sh  main.c
.github/workflows/: build.yml
back/: CMakeLists.txt  main.c
back/data/: 012025.crt  appsettings.json  client_settings.json  server_settings.json
back/data/dev/: appsettings.json  client_settings.json  controllers.json  server_settings.json
back/data/local/: appsettings.json  client_settings.json  server_settings.json
back/include/app/: application.h  configuration.h  service.h
back/include/cesanta/: frozen.h
back/include/client/: api.h  client.h
back/include/core/: client.h  configuration.h
back/include/db/: db_connection.h  postgres.h
back/include/external_projects/cesanta/: frozen.h
back/include/internal_projects/: container.h  dictionary.h  event.h  macro.h  threadpool.h
back/include/mbedtls/: bignum.h  config.h  ssl.h
back/include/server/: api.h  server.h
back/include/server/controllers/: authorization.h  registration.h  server_control.h  welcome.h
back/include/server/webapi/: api.h
back/include/user/: user.h
back/lib/: CMakeLists.txt
back/src/: CMakeLists.txt
back/src/app/: application.c  configuration.c  service.c
back/src/cesanta/: mongoose.c
back/src/client/: api.c  client.c
back/src/core/: client.c  configuration.c  cred.c  server.c
back/src/db/: db_connection.c  postgres.c
back/src/external_projects/cesanta/: frozen.c  mongoose.c
back/src/internal_projects/: container.c  dictionary.c  event.c  threadpool.c
back/src/server/: api.c  server.c
back/src/server/controllers/: authorization.c  registration.c  server_control.c  welcome.c
back/src/server/webapi/: api.c
back/src/user/: user.c
back/tests/: CMakeLists.txt
back/tests/helper/: test_helper.h
back/tests/webapi/: api.c
credentials/: appsettings.json  credentials.json
data/: appsettings.json  credentials.json
front/: .editorconfig  package-lock.json  package.json
front/src/: index.html
front/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
front/src/app/components/authorization/: authorization.component.html  authorization.component.scss  authorization.component.ts
front/src/app/components/header/: header.component.html  header.component.ts
front/src/app/components/welcome/: welcome.component.html  welcome.component.scss  welcome.component.ts
front/src/app/services/: core.service.ts
include/: client.h  server.h  vkclient.h
include/cesanta/: mongoose.h
include/core/: client.h  cred.h  server.h  service.h
include/mbedtls/: check_config.h
src/: client.c  main.c  mongoose.c  server.c  vkclient.c
src/cesanta/: frozen.c  mongoose.c
src/core/: client.c  cred.c  server.c  service.c
